fixed social links on iPhone

--- a/themes/dw-page-modern/inc/assets/css/template.css
+++ b/themes/dw-page-modern/inc/assets/css/template.css
@@ -5627,6 +5627,12 @@ div.thumbnail {
     float: left;
 }
 
+@media only screen and (max-width: 480px) {
+    .social-inline {
+        display: none;
+   }
+}
+
 .social-inline li {
     display: inline-block;
     margin: 0 2px;
@@ -5672,6 +5678,61 @@ div.thumbnail {
 }
 
 .social-inline .linkedin a {
+    background: #049cdb;
+}
+
+.social-inline-footer {
+    list-style: none;
+    margin: 0;
+    margin-top: 20px;
+    float: left;
+}
+
+.social-inline-footer li {
+    display: inline-block;
+    margin: 0 2px;
+}
+
+.social-inline-footer li a {
+    color: #fff;
+    background: #fff;
+    display: block;
+    text-align: center;
+    font-size: 11px;
+    line-height: 20px;
+    width: 20px;
+    height: 20px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+}
+
+.social-inline-footer li a:hover {
+    background: #fff;
+    color: #000;
+}
+
+.social-inline-footer .facebook a {
+    background: #0054a6;
+}
+
+.social-inline-footer .twitter a {
+    background: #00aeef;
+}
+
+.social-inline-footer .google_plus a {
+    background: #db4a39;
+}
+
+.social-inline-footer .youtube a {
+    background: #c4302b;
+}
+
+.social-inline-footer .linkedin a {
     background: #049cdb;
 }
 
@@ -6444,7 +6505,7 @@ body.page .page {
     position: relative;
 }
 
-#colophon .social.social-inline li {
+#colophon .social.social-inline-footer li {
     margin-left: 2px;
 }
 
